--- a/app/src/main/res/layout/password_item.xml
+++ b/app/src/main/res/layout/password_item.xml
@@ -7,13 +7,14 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="6dp"
     app:cardElevation="4dp"
-    app:cardBackgroundColor="@color/lightblue"
+    app:cardMaxElevation="4dp"
+    app:cardBackgroundColor="@color/lightgray"
     android:layout_marginHorizontal="4dp"
     android:layout_marginVertical="4dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:padding="10dp"
         android:layout_margin="0px">
 
         <TextView
@@ -46,7 +47,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvName"
             app:layout_constraintEnd_toStartOf="@id/tvPassword"
-            android:text="apfjuliano@gmail.com"/>
+            tools:text="apfjuliano@gmail.com"/>
 
         <TextView
             android:id="@+id/tvPassword"
@@ -55,7 +56,7 @@
             app:layout_constraintTop_toTopOf="@id/tvUser"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="end"
-            android:text="Password: ******"
+            tools:text="Password: ******"
             android:textAppearance="@style/paragraph"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
