--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="teal">#20c997</color>
     <color name="cyan">#0dcaf0</color>
     <color name="white">#ffffff</color>
-    <color name="lightgray">#bdbdbd</color>
+    <color name="lightgray">#eeeeee</color>
     <color name="lightcarbon">#555459</color>
     <color name="carbon">#3b3a3e</color>
     <color name="darkcarbon">#24292f</color>
