--- a/app/src/main/res/navigation/base_navigation.xml
+++ b/app/src/main/res/navigation/base_navigation.xml
@@ -18,9 +18,9 @@
     </fragment>
     <fragment
         android:id="@+id/passFragment"
-        android:name="com.apfjuliano.savepass.PassFragment"
+        android:name="com.apfjuliano.savepass.AddPasswordFragment"
         android:label="Add new password"
-        tools:layout="@layout/fragment_pass" >
+        tools:layout="@layout/fragment_add_password" >
         <action
             android:id="@+id/action_passFragment_to_homeFragment"
             app:destination="@id/homeFragment"
