--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,9 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="blue">#0d6efd</color>
-    <color name="lightblue">#e3f2fd</color>
+    <color name="darkblue">#004ba0</color>
+    <color name="blue">#1565c0</color>
+    <color name="lightblue">#63a4ff</color>
     <color name="indigo">#6610f2</color>
     <color name="purple">#6f42c1</color>
     <color name="pink">#d63384</color>
