feat: implemented Room Database - Part 2

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,19 +14,36 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="0dp"
         android:layout_height="150dp"
-        android:background="@color/blue"
+        android:background="@color/yellow"
         />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="@string/password_locker"
-        android:textSize="30sp"
-        android:textColor="@color/white"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="-12dp"
+        android:text="@string/password"
+        android:textSize="50sp"
+        android:fontFamily="@font/rubik_dirt_regular"
+        android:textColor="@color/darkblue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/rectangleMargin"
+        />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="-125dp"
+        android:layout_marginTop="-20dp"
+        android:text="@string/locker"
+        android:textSize="50sp"
+        android:fontFamily="@font/rubik_dirt_regular"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@id/textView"
+        app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintBottom_toTopOf="@id/rectangleMargin"
         />
 
@@ -37,8 +54,8 @@
         app:layout_constraintTop_toBottomOf="@id/rectangle"
         app:layout_constraintBottom_toBottomOf="@id/rectangle"
         android:layout_marginHorizontal="16dp"
-        android:backgroundTint="@color/blue"
-        android:background="@color/blue"
+        android:backgroundTint="@color/yellow"
+        android:background="@color/yellow"
         />
 
     <EditText
@@ -65,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="My passwords"
+        android:text="@string/my_passwords"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/lightcarbon"
@@ -117,12 +134,13 @@
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btnPlus"
             android:src="@drawable/ic_add"
-            android:backgroundTint="@color/white"
-            app:tint="@color/purple_700"
+            android:backgroundTint="@color/blue"
+            app:tint="@color/white"
             app:fabSize="mini"
             app:shapeAppearanceOverlay="@style/shapeAppearanceOverlay"
-            app:borderWidth="0dp"
             android:layout_gravity="top|end"
+            app:elevation="12dp"
+            app:borderWidth="0dp"
             android:layout_marginEnd="24dp"
             android:layout_marginTop="48dp"
             android:layout_width="wrap_content"
