--- a/app/src/main/res/layout/password_item.xml
+++ b/app/src/main/res/layout/password_item.xml
@@ -11,6 +11,7 @@
     app:cardBackgroundColor="@color/lightgray"
     android:layout_marginHorizontal="4dp"
     android:layout_marginVertical="4dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,25 +40,56 @@
             android:ellipsize="end"/>
 
         <TextView
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="4dp"
             android:id="@+id/tvUser"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginEnd="4dp"
             android:textAppearance="@style/paragraph"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvName"
-            app:layout_constraintEnd_toStartOf="@id/tvPassword"
-            tools:text="apfjuliano@gmail.com"/>
+            app:layout_constraintEnd_toStartOf="@id/btnVisibility"
+            tools:text="Username: apfjuliano@gmail.com"/>
+
+        <TextView
+            android:layout_marginTop="4dp"
+            android:id="@+id/password"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:textAppearance="@style/paragraph"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvUser"
+            android:text="@string/password_colon" />
 
         <TextView
             android:id="@+id/tvPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/tvUser"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp"
+            android:textAppearance="@style/paragraph"
+            app:layout_constraintStart_toEndOf="@id/password"
+            app:layout_constraintTop_toTopOf="@id/password"
+            app:layout_constraintEnd_toStartOf="@id/btnVisibility"
+            tools:text="******" />
+
+        <ImageView
+            android:id="@+id/btnVisibility"
+            android:src="@drawable/ic_visibility_off"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:gravity="end"
-            tools:text="Password: ******"
-            android:textAppearance="@style/paragraph"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/delete_password_account"/>
+
+        <ImageView
+            android:id="@+id/btnDelete"
+            android:src="@drawable/ic_delete"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/password_visibility_on_off"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
